birthday-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: birthday-app-service
  namespace: birthday-app-ns
spec:
  selector:
    app: birthday-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
