birthday-app/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: birthday-app-httproute
  namespace: birthday-app-ns
spec:
  parentRefs:
  # Placeholder for Gateway Name
  - name: hello-app-http-gateway
    namespace: birthday-app-ns # Or your designated Gateway namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: birthday-app-service
        port: 80
